Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>Contrax.io</h1>
-          <p>CONTRAX.io is about using IoT for verification and validation of smart contract performance.</p>
+          <p>IoT verification of smart contract performance</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Salebarn">Salebarn</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
