--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Contrax.io</h1>
+          <h1>CONTRAX.io</h1>
           <p>IoT verification of smart contract performance</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Salebarn">Salebarn</a></span>
